--- a/images/favico/manifest.json
+++ b/images/favico/manifest.json
@@ -2,8 +2,13 @@
 	"name": "Akta.ba",
 	"icons": [
 		{
-			"src": ".\/images\/favico\/android-chrome-192x192.png",
+			"src": "\/images\/favico\/android-chrome-192x192.png",
 			"sizes": "192x192",
+			"type": "image\/png"
+		},
+		{
+			"src": "\/images\/favico\/android-chrome-384x384.png",
+			"sizes": "384x384",
 			"type": "image\/png"
 		}
 	],
